get object lambda

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -129,6 +129,7 @@ resources:
                 -  Effect: "Allow"
                    Action:
                      - "s3:PutObject"
+                     - "s3.GetObject"
                    Resource: 
                      - Fn::Join:
                        - ""
