feat: update dev/val/prod deploy config files with DEPLOY_NUMBER in env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,6 +79,8 @@ jobs:
           popd
       - name: deploy regulations site server
         id: deploy-regulations-site-server
+        env:
+          RUN_ID: ${{ github.run_id }}
         run: |
           pushd solution/backend
           npm install serverless -g
