--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -84,7 +84,7 @@ resources:
     MyS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: wagtail-bucket2
+        BucketName: wagtail-bucket3=4
         BucketEncryption:
           ServerSideEncryptionConfiguration:
             - ServerSideEncryptionByDefault:
@@ -105,11 +105,6 @@ resources:
                 - GET
                 - HEAD
               MaxAge: 3000
-    CloudFrontOriginAccessIdentity:
-      Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
-      Properties:
-        CloudFrontOriginAccessIdentityConfig:
-          Comment: OAI to prevent direct public access to the bucket
     BucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
@@ -124,26 +119,7 @@ resources:
                   - !Ref MyS3Bucket
                   - /*
               Principal:
-                CanonicalUser:
-                  Fn::GetAtt:
-                  - CloudFrontOriginAccessIdentity
-                  - S3CanonicalUserId
-            - Effect: Deny
-              Action: 's3:*'
-              Resource:
-                - !Join
-                  - ''
-                  - - 'arn:aws:s3:::'
-                    - !Ref MyS3Bucket
-                    - /*
-                - !Join
-                  - ''
-                  - - 'arn:aws:s3:::'
-                    - !Ref MyS3Bucket
-              Principal: '*'
-              Condition:
-                Bool:
-                  aws:SecureTransport: false
+                "*"
         Bucket: !Ref MyS3Bucket
 
     WAFRegionalWebACL: ${file(aws_resources/waf.yml):WAFRegionalWebACL}
