--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -105,6 +105,7 @@ resources:
                 - GET
                 - HEAD
               MaxAge: 3000
+
     BucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
@@ -118,11 +119,23 @@ resources:
                 - - 'arn:aws:s3:::'
                   - !Ref MyS3Bucket
                   - /*
-              Principal:
-                CanonicalUser:
-                  Fn::GetAtt:
-                  - CloudFrontOriginAccessIdentity
-                  - S3CanonicalUserId
+              Principal: "*"
+            - Effect: Deny
+              Action: 's3:*'
+              Resource:
+                - !Join
+                  - ''
+                  - - 'arn:aws:s3:::'
+                    - !Ref MyS3Bucket
+                    - /*
+                - !Join
+                  - ''
+                  - - 'arn:aws:s3:::'
+                    - !Ref MyS3Bucket
+              Principal: '*'
+              Condition:
+                Bool:
+                  aws:SecureTransport: false
         Bucket: !Ref MyS3Bucket
 
     WAFRegionalWebACL: ${file(aws_resources/waf.yml):WAFRegionalWebACL}
