--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -90,10 +90,10 @@ resources:
             - ServerSideEncryptionByDefault:
                 SSEAlgorithm: AES256
         PublicAccessBlockConfiguration:
-          BlockPublicAcls: true
-          BlockPublicPolicy: true
-          IgnorePublicAcls: true
-          RestrictPublicBuckets: true
+          BlockPublicAcls: false
+          BlockPublicPolicy: false
+          IgnorePublicAcls: false
+          RestrictPublicBuckets: false
         CorsConfiguration:
           CorsRules:
             -
@@ -120,22 +120,6 @@ resources:
                   - !Ref MyS3Bucket
                   - /*
               Principal: "*"
-            - Effect: Deny
-              Action: 's3:*'
-              Resource:
-                - !Join
-                  - ''
-                  - - 'arn:aws:s3:::'
-                    - !Ref MyS3Bucket
-                    - /*
-                - !Join
-                  - ''
-                  - - 'arn:aws:s3:::'
-                    - !Ref MyS3Bucket
-              Principal: '*'
-              Condition:
-                Bool:
-                  aws:SecureTransport: false
         Bucket: !Ref MyS3Bucket
 
     WAFRegionalWebACL: ${file(aws_resources/waf.yml):WAFRegionalWebACL}
