fix: add github.run_id to env for populate content for dev step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,6 +93,8 @@ jobs:
       - name: Populate content for ${{ matrix.environment }}
         id: condtional-output-for-not-prod
         if: ${{ matrix.environment  != 'prod' }}
+        env:
+          RUN_ID: ${{ github.run_id }}
         run: |
           pushd solution/backend
           npm install serverless -g
