--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -162,7 +162,7 @@ resources:
                    Action:
                      - "s3:PutObject"
                      - "s3:GetObject"
-                     - "s3.DeleteObject"
+                     - "s3:DeleteObject"
                    Resource:
                      - Fn::Join:
                        - ""
