EREGCSC-2148 - Internal document set up (#941)
* initial commit

* Adding serverless bucket creation and use

* lets see if this works

* linter corrections

* add action button for downloading file in admin

* addd deploy configs

* try this

* dfd

* redo

* adding session token

* see if this works

* get this

* working version of downloads

* Add download button to upload file

* Adding bucket name to environment variables

* fhdfh

* Add logic to check if file exist

* logic for deleting added

* cleaned up code

* dfd

* Changes to the model for subject and category

* Adding some basic api calls

* Set up generate files through api calls

* Update admin to use api for download

* feat: bring in header/modal to policy-repository

* feat: bring in header link urls

* feat: pass params to fetchJson method as single object

* feat: do not set/get localstorage if authenticated is true

* chore: remove unnecessary param

* chore: pass authenticated through CRUD helper methods

* Finalizing api calls

* feat: snake isAuthenticated into vite spa

* feat: auth api example using statute endpoint

* Added descriptions for swagger

* refactor: genericize should/should not cache flag in api methods

* removing unneceessary template

* Add authentication to endpoints

* fix error on download

* made category one per item, added abbreviation

* added abbreviation to category serializer

* Updated string methods

* Model changes

* admin chanes

* feat: very basic download proof of concept

* lets try this

* feat: basic, crude styling

* style: minor flex direction change

* feat: add empty state

* Upload change

* linter corrections

* add content type to file upload

* Fixed issue where youc ant download

* linter fix

* Updating serverless

---------

Co-authored-by: Phil Reese <preese@fearless.tech>

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -30,6 +30,7 @@ provider:
     SIGNUP_URL: ${ssm:/eregulations/signup_url}
     SEARCHGOV_KEY: ${ssm:/eregulations/searchgov/key}
     SEARCHGOV_SITE_NAME: ${ssm:/eregulations/searchgov/site_name}
+    AWS_STORAGE_BUCKET_NAME: file-upload-${self:custom.stage}
     DEPLOY_NUMBER: ${env:RUN_ID}
   vpc:
     securityGroupIds:
@@ -75,6 +76,47 @@ functions: ${file(serverless_functions/${self:custom.environment}_functions.yml)
 
 resources:
   Resources:
+    MyS3Bucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: file-upload-${self:custom.stage}
+        BucketEncryption:
+          ServerSideEncryptionConfiguration:
+            - ServerSideEncryptionByDefault:
+                SSEAlgorithm: AES256
+        PublicAccessBlockConfiguration:
+          BlockPublicAcls: false
+          BlockPublicPolicy: false
+          IgnorePublicAcls: false
+          RestrictPublicBuckets: false
+        CorsConfiguration:
+          CorsRules:
+            -
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
+                - '*'
+              AllowedMethods:
+                - GET
+                - HEAD
+              MaxAge: 3000
+
+    BucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Action: 's3:GetObject'
+              Resource: !Join
+                - ''
+                - - 'arn:aws:s3:::'
+                  - !Ref MyS3Bucket
+                  - /*
+              Principal: "*"
+        Bucket: !Ref MyS3Bucket
+
     WAFRegionalWebACL: ${file(aws_resources/waf.yml):WAFRegionalWebACL}
     LambdaFunctionRole:
       Type: AWS::IAM::Role
@@ -119,11 +161,14 @@ resources:
                 -  Effect: "Allow"
                    Action:
                      - "s3:PutObject"
+                     - "s3:GetObject"
+                     - "s3:DeleteObject"
                    Resource:
-                     Fn::Join:
+                     - Fn::Join:
                        - ""
                        - - "arn:aws:s3:::"
                          - "Ref" : "ServerlessDeploymentBucket"
+                     - "arn:aws:s3:::file-upload-${self:custom.stage}/*"
 
 plugins:
   - serverless-wsgi
