--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -7,6 +7,10 @@ provider:
   region: us-east-1
   iam:
     role: LambdaFunctionRole
+  apiGateway:
+    binaryMediaTypes:
+      - 'applicaiton/pdf'
+      - 'multipart/form-data'
   logs:
     restApi:
       level: INFO
@@ -56,6 +60,8 @@ package:
 custom:
   environment: 'experimental'
   stage: ${opt:stage, self:provider.stage}
+  apiGateway:
+
   wsgi:
     app: handler.application
     packRequirements: false
