--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -34,7 +34,7 @@ provider:
     SEARCHGOV_KEY: ${ssm:/eregulations/searchgov/key}
     SEARCHGOV_SITE_NAME: ${ssm:/eregulations/searchgov/site_name}
     DEPLOY_NUMBER: ${env:RUN_ID}
-    AWS_STORAGE_BUCKET_NAME: file-upload-${self:custom.stage}
+    AWS_STORAGE_BUCKET_NAME: file-repo-eregs-${self:custom.stage}
   tracing:
     apiGateway: true
   vpc:
@@ -77,7 +77,7 @@ resources:
     MyS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: file-upload-${self:custom.stage}
+        BucketName: file-repo-eregs-${self:custom.stage}
         BucketEncryption:
           ServerSideEncryptionConfiguration:
             - ServerSideEncryptionByDefault:
@@ -165,7 +165,7 @@ resources:
                        - ""
                        - - "arn:aws:s3:::"
                          - "Ref" : "ServerlessDeploymentBucket"
-                     - "arn:aws:s3:::file-upload-${self:custom.stage}/*"
+                     - "arn:aws:s3:::file-repo-eregs-${self:custom.stage}/*"
 
     ServerlessSecurityGroup:
       Type: AWS::EC2::SecurityGroup
