update apigateway media types

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -9,8 +9,8 @@ provider:
     role: LambdaFunctionRole
   apiGateway:
     binaryMediaTypes:
-      - 'applicaiton/pdf'
       - 'multipart/form-data'
+      - 'application/pdf'
   logs:
     restApi:
       level: INFO
