EREGCSC-2193 API gateway configurations for file upload (#948)
* Initial commit

* update apigateway media types

* Fixing issue with deploy (#949)

* s3 bucket policy removal (#950)

* s3 bucket policy removal

* remove bucket policy

* merge changes from other main

--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -7,6 +7,10 @@ provider:
   region: us-east-1
   iam:
     role: LambdaFunctionRole
+  apiGateway:
+    binaryMediaTypes:
+      - 'multipart/form-data'
+      - 'application/pdf'
   logs:
     restApi:
       level: INFO
