--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -42,8 +42,9 @@ jobs:
           python-version: "3.9"
       - name: Install dependencies
         run: |
-          python3.9 -m pip install --upgrade pip
-          python3.9 -m pip install --platform manylinux2014_x86_64 --only-binary=:all: -t /someOutputFolder -r ./solution/static-assets/requirements.txt      # build the static assets for the website
+          python -m pip install --upgrade pip
+          pip install -r ./solution/static-assets/requirements.txt
+      # build the static assets for the website
       - name: build static assets
         if: success() && steps.findPr.outputs.number
         env:
