--- a/solution/Dockerfile.template
+++ b/solution/Dockerfile.template
@@ -17,5 +17,6 @@ ENV OIDC_RP_CLIENT_SECRET=''
 ENV OIDC_OP_AUTHORIZATION_ENDPOINT=''
 ENV OIDC_OP_TOKEN_ENDPOINT=''
 ENV OIDC_OP_USER_ENDPOINT=''
+OIDC_OP_JWKS_ENDPOINT=''
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
