--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -44,6 +44,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./solution/static-assets/requirements.txt
+          pip install --platform manylinux2014_aarch64 --target=./python/lib/python3.9/site-packages --implementation cp --python 3.9 --only-binary=:all: --upgrade cryptography
+
       # build the static assets for the website
       - name: build static assets
         if: success() && steps.findPr.outputs.number
@@ -165,6 +167,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./solution/static-assets/requirements.txt
+          pip install --platform manylinux2014_aarch64 --target=./python/lib/python3.9/site-packages --implementation cp --python 3.9 --only-binary=:all: --upgrade cryptography
+
       # run Python unit tests
       - name: Run Python unit tests
         working-directory: ./solution/backend
