--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -44,7 +44,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./solution/static-assets/requirements.txt
-          pip install --platform manylinux2014_aarch64 --target=./python/lib/python3.9/site-packages --implementation cp --python 3.9 --only-binary=:all: --upgrade cryptography
+          PYTHON=python3.9 pip install \
+            --platform manylinux2010_x86_64 \
+            --implementation cp \
+            --only-binary=:all: --upgrade \
+            --target awsbundle \
+            cryptography
 
       # build the static assets for the website
       - name: build static assets
@@ -167,7 +172,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r ./solution/static-assets/requirements.txt
-          pip install --platform manylinux2014_aarch64 --target=./python/lib/python3.9/site-packages --implementation cp --python 3.9 --only-binary=:all: --upgrade cryptography
+          PYTHON=python3.9 pip install \
+            --platform manylinux2010_x86_64 \
+            --implementation cp \
+            --only-binary=:all: --upgrade \
+            --target awsbundle \
+            cryptography
 
       # run Python unit tests
       - name: Run Python unit tests
