--- a/.github/workflows/schedule-jira-sync.yml
+++ b/.github/workflows/schedule-jira-sync.yml
@@ -35,5 +35,5 @@ jobs:
           jira-ignore-statuses: Done, Closed, Canceled
           jira-custom-fields: '{ "customfield_10100": "EREGCSC-1989" }'
           aws-severities: CRITICAL, HIGH, MEDIUM
-          assign-jira-ticket-to: VU6Q
+          #assign-jira-ticket-to: VU6Q
           #auto-close: false
