--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -41,6 +41,7 @@ provider:
     OIDC_OP_TOKEN_ENDPOINT: ${ssm:/eregulations/oidc/token_endpoint}
     OIDC_OP_USER_ENDPOINT: ${ssm:/eregulations/oidc/user_endpoint}
     DEPLOY_NUMBER: ${env:RUN_ID}
+    EUA_FEATUREFLAG: ${ssm:/eregulations/eua/featureflag}
   vpc:
     securityGroupIds:
       - ${ssm:/eregulations/aws/securitygroupid}
