--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -42,6 +42,7 @@ provider:
     OIDC_OP_AUTHORIZATION_ENDPOINT: ${ssm:/eregulations/oidc/authorization_endpoint}
     OIDC_OP_TOKEN_ENDPOINT: ${ssm:/eregulations/oidc/token_endpoint}
     OIDC_OP_USER_ENDPOINT: ${ssm:/eregulations/oidc/userinfo_endpoint}
+    EUA_FEATUREFLAG: ${ssm:/eregulations/eua/featureflag}
     DEPLOY_NUMBER: ${env:RUN_ID}
     AWS_STORAGE_BUCKET_NAME: file-repo-eregs-${self:custom.stage}
   tracing:
