test: ensure test-cypress block has permissions

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -315,6 +315,9 @@ jobs:
             [1]: ${{ env.django_url }}
           reactions: "+1"
   test-cypress:
+    permissions:
+      contents: read
+      id-token: write
     needs: [deploy-go, deploy-django, build-and-deploy-vue]
     runs-on: ubuntu-20.04
     steps:
@@ -334,8 +337,6 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
           aws-region: us-east-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       - uses: dkershner6/aws-ssm-getparameters-action@v1
         with:
             parameterPairs: "/eregulations/http/test_user = CYPRESS_TEST_USERNAME,
