test: get ssm test username and password and set as cypress env vars

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -334,6 +334,13 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
           aws-region: us-east-1
+      # Get test user credentials from AWS Parameter Store
+      - name: Get test user credentials
+        uses: dkershner6/aws-ssm-getparameters-action@v1
+        with:
+            parameterPairs: "/eregulations/http/test_user = CYPRESS_TEST_USERNAME,
+                /eregulations/http/test_password = CYPRESS_TEST_PASSWORD"
+            withDecryption: "true" # defaults to true
       # Setup node environment
       - name: Setup Node
         uses: actions/setup-node@v3
