--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -338,8 +338,8 @@ jobs:
       - name: Get test user credentials
         uses: dkershner6/aws-ssm-getparameters-action@v1
         with:
-            parameterPairs: "/eregulations/http/test_user = CYPRESS_TEST_USERNAME,
-                /eregulations/http/test_password = CYPRESS_TEST_PASSWORD"
+            parameterPairs: "/eregulations/http/user = CYPRESS_TEST_USERNAME,
+                /eregulations/http/password = CYPRESS_TEST_PASSWORD"
             withDecryption: "true" # defaults to true
       # Setup node environment
       - name: Setup Node
