--- a/solution/backend/pyproject.toml
+++ b/solution/backend/pyproject.toml
@@ -8,7 +8,7 @@ select = ["E", "F", "G", "I", "S", "W", "ASYNC",
           "E224", "E225", "E226", "E227", "E228", "E231", "E241", "E242", "E251", "E252", "E261", "E262", "E265", "E266",
           "E271", "E272", "E273", "E274", "E275",
         ]
-ignore = []
+ignore = ['S101']
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
 fixable = ["E", "F", "I", "W",
