--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -153,6 +153,13 @@ jobs:
         working-directory: ./solution/backend
         run: |
           pytest -vv
+      # Get test user credentials from AWS Parameter Store
+      - name: Get test user credentials
+        uses: dkershner6/aws-ssm-getparameters-action@v1
+        with:
+            parameterPairs: "/eregulations/http/test_user = CYPRESS_TEST_USERNAME,
+                /eregulations/http/test_password = CYPRESS_TEST_PASSWORD"
+            withDecryption: "true" # defaults to true
       - name: end-to-end tests
         uses: cypress-io/github-action@v5
         with:
