--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -28,6 +28,8 @@ provider:
     DJANGO_ADMIN_PASSWORD: ${ssm:/eregulations/http/password}
     DJANGO_SETTINGS_MODULE: ${ssm:/eregulations/django_settings_module}
     ALLOWED_HOST: '.amazonaws.com'
+    BASE_URL: ${ssm:/eregulations/base_url}
+    STAGE_ENV: ${self:custom.stage}
     STATIC_URL: ${self:custom.settings.static_url}
     CUSTOM_URL: ${ssm:/eregulations/custom_url, ''}
     SURVEY_URL: ${ssm:/eregulations/survey_url}
@@ -35,7 +37,14 @@ provider:
     SEARCHGOV_KEY: ${ssm:/eregulations/searchgov/key}
     SEARCHGOV_SITE_NAME: ${ssm:/eregulations/searchgov/site_name}
     AWS_STORAGE_BUCKET_NAME: file-repo-eregs-${self:custom.stage}
+    OIDC_OP_JWKS_ENDPOINT: ${ssm:/eregulations/oidc/jwks_endpoint}
+    OIDC_RP_CLIENT_ID: ${ssm:/eregulations/oidc/client_id}
+    OIDC_RP_CLIENT_SECRET: ${ssm:/eregulations/oidc/client_secret}
+    OIDC_OP_AUTHORIZATION_ENDPOINT: ${ssm:/eregulations/oidc/authorization_endpoint}
+    OIDC_OP_TOKEN_ENDPOINT: ${ssm:/eregulations/oidc/token_endpoint}
+    OIDC_OP_USER_ENDPOINT: ${ssm:/eregulations/oidc/user_endpoint}
     DEPLOY_NUMBER: ${env:RUN_ID}
+    EUA_FEATUREFLAG: ${ssm:/eregulations/eua/featureflag}
   vpc:
     securityGroupIds:
       - ${ssm:/eregulations/aws/securitygroupid}
