added dockertemplate stuff and settings

--- a/solution/Dockerfile.template
+++ b/solution/Dockerfile.template
@@ -12,11 +12,18 @@ RUN pip install --no-cache-dir --upgrade pip setuptools \
 
 ENV SEARCHGOV_KEY=''
 ENV SEARCHGOV_SITE_NAME=''
+ENV EREGS_USERNAME=""
+ENV EREGS_PASSWORD=""
+ENV HTTP_AUTH_USER=""
+ENV HTTP_AUTH_PASSWORD=""
 ENV OIDC_RP_CLIENT_ID=''
 ENV OIDC_RP_CLIENT_SECRET=''
 ENV OIDC_OP_AUTHORIZATION_ENDPOINT=''
 ENV OIDC_OP_TOKEN_ENDPOINT=''
 ENV OIDC_OP_USER_ENDPOINT=''
 ENV OIDC_OP_JWKS_ENDPOINT=''
+ENV FILE_MANAGER_AWS_ACCESS_KEY_ID=""
+ENV FILE_MANAGER_AWS_SECRET_ACCESS_KEY=""
+ENV FILE_MANAGER_AWS_BUCKET_NAME="" 
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
