EREGCSC-2156 -- Refined policy repository results styling (#955)
* fix: add last updated date to policy-repository footer

* chore: simplify footer date logic for spa/non-spa in django template

* feat: properly redirect subpart view if no date

* refactor: simplify locationUrl filter to remove unnecessary parameters and async calls

* chore: update eslint rule

* feat: add basic PolicyResults component

* refactor: move locatio filtering logic into RelatedSections component

* feat: better loading logic for partsLastUpdated

* refactor: better provide django urls deep into component tree for policy-repo

* fix: wrong prop provided

* refactor: provide props into resources and search better

* fix: add injection to RegResults

* feat: continue styling

* chore: clean up glaring lint errors

* feat: style subject chips

* fix: fix spelling mistake in scss file

* chore: use gap for row and column gap between subj chips

* feat: use doc.name for name download link

* test: basic local only auth e2e tests

* test: use cypress.env.json for env variables

* test: tweak cypress login flow

* test: first attempt to pull in AWS params to github action as env vars

* test: tweak aws secrets used in ssm action

* test: ensure test-cypress block has permissions

* chore: add name and descriptive comment to new action added to test-cypress job

* test: see if action runs just configuring aws credentials

* test: reorder based on aws docs example

* test: add environment to test-cypress job

* test: get ssm test username and password and set as cypress env vars

* test: use existing seeded eregsuser creds

* test: remove granular permissions and see if things still work

* test: update deploy.yml to ger test user creds from param store

* test: add template for cypress.env.json

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -315,14 +315,29 @@ jobs:
             [1]: ${{ env.django_url }}
           reactions: "+1"
   test-cypress:
-    needs: [deploy-go, deploy-django, build-and-deploy-vue]
+    environment:
+      name: "dev"
     runs-on: ubuntu-20.04
+    needs: [deploy-go, deploy-django, build-and-deploy-vue]
     steps:
       # Checkout the code
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: true
+      # Configure AWS credentials for GitHub Actions
+      - name: Configure AWS credentials for GitHub Actions
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_TO_ASSUME }}
+          aws-region: us-east-1
+      # Get test user credentials from AWS Parameter Store
+      - name: Get test user credentials
+        uses: dkershner6/aws-ssm-getparameters-action@v1
+        with:
+            parameterPairs: "/eregulations/http/user = CYPRESS_TEST_USERNAME,
+                /eregulations/http/password = CYPRESS_TEST_PASSWORD"
+            withDecryption: "true" # defaults to true
       # Setup node environment
       - name: Setup Node
         uses: actions/setup-node@v3
