--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -21,8 +21,8 @@ custom:
     pipCmdExtraArgs: ['--platform manylinux2014_x86_64', '--only-binary=:all:'],
     slim: true,
     layer:
-      name: python-django
-      description: "Layer which contains django requirements"
+      name: python-django,
+      description: "Layer which contains django requirements",
       compatibleRuntimes:
         - python3.9
     }
