--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -16,16 +16,17 @@ custom:
   pythonRequirements: {
     dockerizePip: false,
     usePoetry: false,
+    layer: true,
     useDownloadCache: false,
     useStaticCache: false,
     pipCmdExtraArgs: ['--platform manylinux2014_x86_64', '--only-binary=:all:'],
     slim: true,
-    layer: {
-      name: python-django,
+    layer: 
+      ,name: python-django,
       description: "Layer which contains django requirements",
       compatibleRuntimes:
         - python3.9
-      s}
+      
     }
 
 package:
