--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -13,13 +13,15 @@ custom:
     - bucketName: eregs-${self:custom.stage}-site-assets
       localDir: ./regulations
       deleteRemoved: false
-  pythonRequirements:
-    layer: 
-      name: python-django
-      description: "Layer which contains django requirements"
-      compatibleRuntimes:
-        - python3.10
-
+  pythonRequirements: {
+    dockerizePip: false,
+    usePoetry: false,
+    layer: true,
+    useDownloadCache: false,
+    useStaticCache: false,
+    pipCmdExtraArgs: ['--platform manylinux2014_x86_64', '--only-binary=:all:'],
+    slim: true
+  }
 package:
   #patterns:
   #  - '!node_modules/**'
