--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -14,7 +14,7 @@ custom:
       localDir: ./regulations
       deleteRemoved: false
   pythonRequirements: 
-      dockerizePip: false
+    - dockerizePip: false
       usePoetry: false
       layer: true
       useDownloadCache: false
