--- a/solution/static-assets/requirements.txt
+++ b/solution/static-assets/requirements.txt
@@ -6,6 +6,7 @@ django-debug-toolbar
 django>=3.1,<4
 requests
 djangorestframework
+python-jose
 psycopg2-binary
 django-solo
 django-opensearch-dsl
